<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Settings tabs names -->
    <string name="app_settings">Application settings</string>
    <string name="rfid_settings">RFID settings</string>
    <string name="reader_settings">Reader settings</string>
    <string name="antenna_settings">Antenna tuning</string>
    <string name="Authentication_settings">Authentication</string>
    <string name="firmware_updates">Firmware update</string>
    <!-- -->

    <!-- Drawer item names -->
    <string name="drawer_connection">Connection</string>
    <string name="drawer_updates">Updates</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_guide">Quick Guide</string>
    <string name="drawer_about">About</string>
    <!-- -->

    <string name="app_name">Nordic ID RFID Demo</string>

    <string name="average_speed_textview">AVG. SPEED</string>
    <string name="peak_textview">PEAK</string>
    <string name="tags_per_second_textview">TAGS/S</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="clear">CLEAR</string>
    <string name="locate">LOCATE</string>
    <string name="locate_tag">Locate tag</string>
    <string name="text_tam2">TAG AUTHENTICATION METHOD 2</string>
    <string name="write">WRITE</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="refresh">REFRESH</string>
    <string name="refresh_list">REFRESH LIST</string>
    <string name="restore_default_settings">RESTORE DEFAULT SETTINGS</string>
    <string name="restore">Restore</string>
    <string name="update_fw">Update NUR firmware</string>
    <string name="update_bth">Update bluetooth firmware</string>
    <string name="file_picker">Local storage</string>
    <string name="file_picker_remote">NORDIC ID Servers</string>
    <string name="upload_firmware">upload NUR firmware</string>
    <string name="bth_update_firmware">Update Bth firmware</string>
    <string name="file_name">File Name</string>
    <string name="progress">Progress</string>
    <string name="not_available">N/A</string>
    <string name="idle_status">Idle</string>
    <string name="set_cfg_file">Set configuration from file...</string>


    <string name="hint">HINT</string>

    <string name="inventory_started">Inventory started</string>
    <string name="inventory_stopped">Inventory stopped</string>

    <string name="no_reader_attached">No reader connected</string>
    <string name="attached_reader_info">Connected reader info:</string>
    <string name="about_dialog_model">Model:</string>
    <string name="about_dialog_serial">Serial:</string>
    <string name="about_dialog_firmware">NUR firmware:</string>
    <string name="about_dialog_bootloader">NUR bootloader:</string>
    <string name="about_dialog_accessory">Device firmware:</string>
    <string name="about_dialog_accessory_bldr">Device bootloader:</string>
    <string name="about_dialog_nurapi">NurApi version:</string>
    <string name="about_dialog_app">App version:</string>
    <string name="about_dialog_conn_info">Device connection info:</string>

    <string name="write_tag_hint">Select a tag to write</string>
    <string name="locatable_epc_hint">Select EPC to locate from list</string>
    <string name="new_epc_hint">New EPC..</string>

    <string name="location_stopped">Trace stopped</string>
    <string name="location_started">Trace started</string>

    <string name="default_settings_restored">Default settings restored!</string>

    <string name="inventory_clear_notice">Clear all current readings?</string>
    <string name="no_tags">No tags read yet</string>

    <string name="no_auth_yet">No tags authenticated yet</string>

    <string name="start_location">Start location</string>
    <string name="start_location_notice">Do you want to start location for </string>

    <string name="no_tags_found">No tags found</string>
    <string name="write_app_top_hint">Select a tag to write from list</string>

    <string name="reader_connection_error">Reader not connected</string>
    <string name="reader_error">Reader error</string>
    <string name="unexpected_error">Unexpected error has occurred</string>

    <string name="cannot_clear">Cannot clear while inventory is running</string>

    <string name="reader_connected">Reader connected</string>
    <string name="reader_disconnected">Reader disconnected</string>

    <string name="title_activity_settings">Settings</string>
    <string name="region_spinner">Region</string>
    <string name="tx_level_spinner">TX-level</string>
    <string name="link_freg_spinner">Link frequency</string>
    <string name="rx_decod_spinner">RX-decoding</string>
    <string name="tx_modul_spinner">TX-modulation</string>
    <string name="q_spinner">Q</string>
    <string name="rounds_spinner">Rounds</string>
    <string name="session_spinner">Session</string>
    <string name="target_spinner">Target</string>
    <string name="antenna_spinner">Enabled Antennas</string>
    <string name="autotune_checkbox">Autotune</string>
    <string name="regionLock_checkbox">Region Lock</string>
    <string name="lock_region_button">Lock device region</string>
    <string name="unlock_region_button">Unlock device region</string>

    <string name="dialog_epc">TAG\'S EPC:</string>
    <string name="dialog_rssi">RSSI:</string>
    <string name="dialog_timestamp">TIMESTAMP:</string>
    <string name="dialog_freg">FREQUENCY:</string>
    <string name="dialog_found">FOUND (TIMES):</string>
    <string name="dialog_found_precent">FOUND (% OF TIME):</string>

    <string name="text_not_implemented">Not implemented yet</string>

    <string name="dialog_authenticated">Authenticated:</string>

    <string name="dialog_auth_ok">Tag authenticated OK</string>
    <string name="dialog_auth_fail">This tag failed authentication</string>

    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device</string>
    <string name="paired">paired</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">SCAN</string>

    <string name="text_tags_processed">TAGS PROCESSED</string>
    <string name="text_tags_ok">TAGS OK</string>
    <string name="text_tags_failed">TAGS FAILED</string>
    <string name="text_tam1_keynum">Select key number</string>

    <string name="text_authenticating">Authenticating (TAM1)</string>
    <string name="text_tags_auth_ok">Tags authenticated OK</string>
    <string name="text_tags_auth_failed">Failed authentications</string>

    <string name="text_auth_keys_missing">Missing keys</string>
    <string name="text_auth_key_setup_query">The authentication keys are not loaded.\nWould you like to go to setup and select the key file?</string>

    <string name="text_key_set_loaded">Loaded %1$d keys, using set %2$d</string>


    <string name="device_boot_mode">Device in boot mode please run the update NUR firmware app first</string>


    <string name="btn_ready">Ready</string>
    <string name="no_bluetooth_device">"No device connected please connect a bluetooth device first"</string>

    <string name="hint_title">Swipe left and right</string>
    <string name="text_about_tabs">Hint:\nWithin each view, check whether it is possible to see more tabs and features by swiping left or right.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="text_ok">OK</string>

    <!-- Barcode App -->
    <string name="barcode_no_result">No available results</string>

    <!-- Updates App -->
    <string name="nur_update">NUR firmware update</string>
    <string name="dfu_update">Device update</string>
    <string name="dfu_bldr_update">Device bootloader update</string>
    <string name="nur_app_update">NUR update</string>
    <string name="nur_bldr_update">NUR bootloader update</string>
    <string name="start_update">Start update</string>
    <string name="update_connected">Connected to device</string>
    <string name="update_connecting">Connecting to device</string>
    <string name="update_disconnected">Disconnected from device</string>
    <string name="update_aborted">Update interrupted</string>
    <string name="update_validating_fw">Validating firmware</string>
    <string name="update_starting">Update service starting</string>
    <string name="update_started">Update service started</string>
    <string name="update_running">Updating device</string>
    <string name="update_disconnecting">Disconnecting from device</string>
    <string name="ready_wait_boot">Ready, wait for boot&#8230;</string>
    <string name="update_complete">Update complete</string>
    <string name="initiating_update">Starting update</string>
    <string name="device_not_ready">Device not yet ready</string>
    <string name="file_check_failed">Selected file check failed!</string>
    <string name="no_file_selected">No file selected</string>
    <string name="update_invalid_file">Invalid update file</string>
    <string name="update_dialog_title">Available Updates</string>
    <string name="update_list_text">Select update</string>
    <string name="ui_blocked">UI blocked during update. Do not close the application or switch to another while it\'s running.</string>
    <string name="update_state_idle">Update Service idle</string>
    <string name="looking_for_device" >Looking for device</string>
    <string name="update_file_source" >Update file source</string>
    <string name="dfu_finished" >Update finished. Please wait until device restart (~30sec)</string>

    <!-- Update sources -->
    <string name="DFU_APP_SRC" translatable="false">https://raw.githubusercontent.com/NordicID/nur_exa_firmware/master/Applicationfirmwares.json</string>
    <string name="DFU_BLDR_SRC" translatable="false">https://raw.githubusercontent.com/NordicID/nur_exa_firmware/master/Bootloaderfirmwares.json</string>
    <string name="NUR_APP_SRC" translatable="false">https://raw.githubusercontent.com/NordicID/nur_firmware/master/firmwares.json</string>
    <string name="NUR_BLDR_SRC" translatable="false">https://raw.githubusercontent.com/NordicID/nur_exa_firmware/master/firmwares.json</string>
    <string name="export_csv">Export and share inventory list as CSV file</string>
    <string name="share_via">Share via</string>
    <string name="connection_details">Connection Details</string>


</resources>
