<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioUpdateSelect"
        android:orientation='vertical'
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/radio_nur_update" >
            <RadioButton
                android:id="@+id/radio_dfu_update"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:enabled="false"
                android:text="@string/dfu_update" />

            <RadioButton
                android:id="@+id/radio_dfu_bldr_update"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:enabled="false"
                android:text="@string/dfu_bldr_update" />

            <RadioButton
                android:id="@+id/radio_nur_update"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:text="@string/nur_app_update" />

            <RadioButton
                android:id="@+id/radio_nur_bldr_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/nur_bldr_update" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_update_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#c0392b"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:text="@string/update_state_idle"/>

    <TextView
        android:id="@+id/text_update_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:textStyle="normal"
        android:text="@string/update_file_source"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        >

        <Button
            android:id="@+id/btn_select_file"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/file_picker"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_download_file"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/file_picker_remote"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_start_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/start_update" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_name" />

    <TextView
        android:id="@+id/text_filename"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:text="@string/not_available" />

    <TextView
        android:id="@+id/textView3"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress" />

    <TextView
        android:id="@+id/text_update_progress"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:gravity="center"
        android:text="@string/not_available" />

    <ProgressBar
        android:id="@+id/update_progressbar"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress_spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ui_blocked_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#c0392b"
        android:textStyle="bold"
        android:textSize="15sp"
        android:visibility="gone"
        android:text="@string/ui_blocked" />

</LinearLayout>