<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp" >
    
    <TextView 
        android:id="@+id/dialog_autolocate_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_location_notice"
        android:padding="10dp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/BorderlessButton"
            android:padding="5dp" />
        
        <Button 
            android:id="@+id/start_autolocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_location"
            style="@style/BorderlessButton"
            android:padding="5dp" />
        
        
    </LinearLayout>

</LinearLayout>
