<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/write_dialog_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp" />
    
    <EditText
        android:id="@+id/write_dialog_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/new_epc_hint" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" 
        android:layout_marginTop="20dp"
        android:layout_gravity="right" >
        
        <Button 
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="5dp"
            android:layout_marginRight="15dp"
            android:textSize="15sp"
            style="@style/BorderlessButton" />
        
        <Button
            android:id="@+id/dialog_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:padding="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/holo_blue_light"
            style="@style/BorderlessButton" />
        
    </LinearLayout>

</LinearLayout>
