<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:textStyle="bold"
		android:textSize="20sp"
        android:text="@string/text_tags_processed"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

	<TextView
		android:id="@+id/num_processed_tags"
		android:freezesText="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:textSize="40sp"
		android:text="0"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp" />
    
	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:weightSum="2" >
	            
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:gravity="center"
					android:textStyle="bold"
					android:textSize="20sp"
		            android:text="@string/text_tags_ok" />
			    
			    <TextView
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:gravity="center"
					android:textStyle="bold"
					android:textSize="20sp"
					android:text="@string/text_tags_failed" />
	            
	        </LinearLayout>
            
            <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:weightSum="2" >
	            
		        <TextView
		            android:id="@+id/tags_ok_textview"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:freezesText="true"
		            android:gravity="center"
					android:textStyle="bold"
					android:textSize="40sp"
					android:layout_marginTop="20dp"
		            android:text="0" />
			    
			    <TextView
			        android:id="@+id/tags_failed_textview"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:freezesText="true"
			        android:gravity="center"
					android:textStyle="bold"
					android:textSize="40sp"
					android:layout_marginTop="20dp"
			        android:text="0" />
	            
	        </LinearLayout>

		<TextView
			android:id="@+id/text_used_key"
			android:freezesText="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textSize="30sp"
			android:text="Keyset used: N/A"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="50dp"
			android:layout_marginBottom="20dp" />

        </LinearLayout>
    
    
</LinearLayout>